# remote-defmt-srv

./: Cargo.toml
.github/workflows/: ci.yml
src/: defmt_tcp.rs  main.rs  parse_elf.rs
