[package]
name = "remote-defmt-srv"
version = "0.1.0"
edition = "2024"
keywords = ["cli", "embedded", "defmt", "esp32"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
defmt-decoder = "1.0.0"
tokio = { version = "1.48.0", features = ["io-util", "net", "rt-multi-thread", "macros", "fs", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object = "0.36"
hex = "0.4.3"
notify = "8.2.0"
socket2 = "0.6.1"
